<resources>
    <string name="app_name">Polr</string>

    <!-- Strings related to login -->
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_url">URL</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_use_anonymously">Skip</string>
    <string name="confirm_anonymous">Are you sure you want to skip sign in? You won\'t be able to keep track of your shortened URLs or their statistics.</string>
    <string name="continue_anonymously">Continue</string>
    <string name="cancel_anonymous">Cancel</string>
    <string name="connecting">Connecting</string>
    <string name="error_invalid_url">This URL is invalid</string>
    <string name="error_invalid_username">This username is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_connection_failure">Couldn\'t find Polr</string>
    <string name="error_field_required">This field is required</string>
</resources>
